=== (ongoing) ===

- Improved admins
- Fixed MANIFEST.in
- re-setting the state of the modal to not shown when forcing the modal
- Fixed ``NEWSLETTER_SIGNUP_FORCE_MODAL`` setting
- Added ``has_seen_modal`` template tag

=== 0.3 ===

- Added setting to toggle if name is required for newsletter signup (default is
  False = only email required)
- Added setting to toggle verification process (default is False = not required)
- Extended forms and views to allow optional verification
- Simplified NewsletterSignupView
- Added NewsletterSignupSuccessView
- Updated NewsletterSignup model
    - added first_name, last_name, source and referer field
    - added descriptors for compatibility with projects using creation_date
      instead of signup_date
- Made the app ready for Django 1.8-1.9 and Python2.7-3.5
- Entirely recreated migrations for Django>1.8

=== 0.2 ===

- added check_newsletter_signups command
- improved admin

=== 0.1 ===
- Initial commit